fix horizontal scroll issue

--- a/packages/shared/utilities.module.css
+++ b/packages/shared/utilities.module.css
@@ -1,6 +1,6 @@
 @layer utilities {
   .contentContainer {
-    width: 100vw;
+    width: 100%;
     max-width: 1440px;
     margin-inline: auto;
     padding-inline: var(--a-spacing-4);
